--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -9,16 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "preact": "^10.11.2"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.6",
-    "@types/chrome": "^0.0.203",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@preact/preset-vite": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
