--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
     "@preact/preset-vite": "^2.4.0",
+    "@types/chrome": "^0.0.203",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
