--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.11.2"
+    "@reduxjs/toolkit": "^1.9.0",
+    "preact": "^10.11.2",
+    "react-redux": "^7.2.9",
+    "webext-redux": "^2.1.9"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.7",
