--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
+    "history": "^5.3.0",
+    "normalize.css": "^8.0.1",
     "preact": "^10.11.2",
+    "preact-router": "^4.1.0",
     "react-redux": "^7.2.9",
     "webext-redux": "^2.1.9"
   },
@@ -18,7 +22,11 @@
     "@crxjs/vite-plugin": "2.0.0-beta.7",
     "@preact/preset-vite": "^2.4.0",
     "@types/chrome": "^0.0.203",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-aliases": "^0.9.7"
   }
 }
