--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -18,8 +18,9 @@
     "jsxImportSource": "preact",
     "baseUrl": ".",
     "paths": {
-      "react": ["node_modules/preact/compat"],
-      "react-dom": ["node_modules/preact/compat"]
+      "react": ["./node_modules/preact/compat"],
+      "react-dom": ["./node_modules/preact/compat"],
+      "@*": ["./src/*"]
     }
   },
   "include": ["src"],
