--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -16,12 +16,14 @@
     "preact": "^10.11.2",
     "preact-router": "^4.1.0",
     "react-redux": "^7.2.9",
+    "ses": "^0.12.4",
     "webext-redux": "^2.1.9"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.7",
     "@preact/preset-vite": "^2.4.0",
     "@types/chrome": "^0.0.203",
+    "@types/node": "^18.11.12",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
