--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
+    "eth-keyring-controller": "^8.1.0",
     "history": "^5.3.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.11.2",
