--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -13,14 +13,17 @@
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
     "daisyui": "^2.43.2",
+    "emittery": "^1.0.1",
     "eth-keyring-controller": "^8.1.0",
     "history": "^5.3.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.11.2",
     "preact-router": "^4.1.0",
     "react-redux": "^7.2.9",
+    "redux-persist": "^6.0.0",
     "ses": "^0.12.4",
-    "webext-redux": "^2.1.9"
+    "webext-redux": "^2.1.9",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.7",
@@ -30,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "@types/chrome": "^0.0.203",
     "@types/node": "^18.11.12",
+    "@types/webextension-polyfill": "^0.9.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
