Setup keyrings for sandbox environment

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -10,13 +10,22 @@
     "devtools": "redux-devtools --hostname=localhost --port=8000 --open"
   },
   "dependencies": {
+    "@account-abstraction/contracts": "^0.3.0",
+    "@account-abstraction/sdk": "^0.3.0",
     "@heroicons/react": "^2.0.13",
+    "@metamask/browser-passworder": "^4.0.2",
+    "@metamask/eth-hd-keyring": "^5.0.1",
+    "@metamask/eth-sig-util": "^5.0.2",
+    "@metamask/eth-simple-keyring": "^5.0.0",
+    "@metamask/obs-store": "^7.0.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "buffer": "^6.0.3",
     "daisyui": "^2.43.2",
     "emittery": "^1.0.1",
-    "eth-keyring-controller": "^8.1.0",
     "history": "^5.3.0",
+    "joi": "^17.7.0",
     "normalize.css": "^8.0.1",
+    "obs-store": "^4.0.3",
     "preact": "^10.11.2",
     "preact-router": "^4.1.0",
     "react-redux": "^7.2.9",
@@ -27,6 +36,8 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.7",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@preact/preset-vite": "^2.4.0",
     "@redux-devtools/cli": "^1.0.7",
     "@redux-devtools/remote": "^0.7.5",
