--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "epf-wallet",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "dev": "lerna run dev --parallel"
+  },
   "workspaces": [
     "packages/*"
   ],
