--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -13,9 +13,8 @@
   },
   "dependencies": {
     "@metamask/browser-passworder": "^4.0.2",
-    "@metamask/eth-hd-keyring": "^5.0.1",
     "@metamask/eth-sig-util": "^5.0.2",
-    "@metamask/eth-simple-keyring": "^5.0.0",
-    "@metamask/safe-event-emitter": "^2.0.0"
+    "@metamask/safe-event-emitter": "^2.0.0",
+    "ethers": "^5.7.2"
   }
 }
